<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="woowacourse.movie.ui.model.MovieUiModel" />

        <variable
            name="headCountListener"
            type="woowacourse.movie.booking.detail.listener.HeadCountListener" />

        <variable
            name="reservationListener"
            type="woowacourse.movie.booking.detail.listener.ReservationListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".booking.detail.BookingDetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_booking_poster"
                    android:layout_width="0dp"
                    android:layout_height="341dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    app:imageId="@{movie.imageSource}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/harry_potter" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_booking_poster">

                    <TextView
                        android:id="@+id/tv_booking_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@{movie.title}"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="영화 제목" />

                    <TextView
                        android:id="@+id/tv_booking_screening_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="29dp"
                        android:text="@string/screening_date_info"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_booking_title" />

                    <TextView
                        android:id="@+id/tv_booking_screening_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="29dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:endDate="@{movie.screeningEndDate}"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_booking_screening_info"
                        app:layout_constraintStart_toEndOf="@id/tv_booking_screening_info"
                        app:layout_constraintTop_toBottomOf="@id/tv_booking_title"
                        app:startDate="@{movie.screeningStartDate}"
                        tools:text="영화 상영 기간" />

                    <TextView
                        android:id="@+id/tv_booking_running_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/running_time_info"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_booking_screening_info" />

                    <TextView
                        android:id="@+id/tv_booking_running_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{@string/minute_text(movie.runningTime)}"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_booking_running_info"
                        app:layout_constraintStart_toEndOf="@id/tv_booking_running_info"
                        app:layout_constraintTop_toBottomOf="@id/tv_booking_screening_info"
                        tools:text="152분" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/spinner_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="37dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_booking_running_info">

                        <Spinner

                            android:id="@+id/spinner_screening_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <Spinner
                            android:id="@+id/spinner_screening_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"

                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/btn_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:onClick="@{() -> headCountListener.onDecreaseHeadCount()}"
                        android:text="@string/btn_minus_text"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_layout" />

                    <TextView
                        android:id="@+id/tv_people_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/btn_plus"
                        app:layout_constraintEnd_toStartOf="@id/btn_plus"
                        app:layout_constraintStart_toEndOf="@id/btn_minus"
                        app:layout_constraintTop_toTopOf="@id/btn_minus"
                        tools:text="0" />

                    <Button
                        android:id="@+id/btn_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:onClick="@{() -> headCountListener.onIncreaseHeadCount()}"
                        android:text="@string/btn_plus_text"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_layout" />

                    <Button
                        android:onClick="@{() -> reservationListener.onReserveTicket()}"
                        android:id="@+id/btn_selection_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/booking_btn_select_complete"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_plus" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
