<resources>
    <string name="app_name">Movie</string>
    <string name="movie_poster">movie poster</string>

    <string name="movie_date">상영일: %s ~ %s</string>
    <string name="running_time">러닝타임: %d분</string>
    <string name="reservation_button_text">지금 예매</string>

    <string name="reservation_finish_button_text">선택 완료</string>
    <string name="reservation_count_plus">+</string>
    <string name="reservation_count_minus">-</string>

    <string name="reservation_count_info">일반 %s명</string>
    <string name="reservation_total_price">%,d원 (현장 결제)</string>
    <string name="reservation_total_money">%,d원</string>

    <string name="reservation_dialog_title">예매 확인</string>
    <string name="reservation_dialog_message">정말 예매하시겠습니까?</string>
    <string name="reservation_dialog_positive">예매 완료</string>
    <string name="reservation_dialog_negative">취소</string>

    <string name="reservation_result_cancel_time_description">영화 상영 시작 시간 %d분 전까지\n취소가 가능합니다.</string>
    <string name="invalid_reservation_message">"예약 날짜 및 시간을 선택해 주세요"</string>
    <string name="invalid_reservation_count_message">"최소 인원은 %d명 이상 선택해 주세요"</string>

    <string name="movie_screening_period_format">yyyy.M.d</string>
    <string name="reservation_datetime_format">yyyy.M.d HH:mm</string>

    <string name="unavailable_reservation_message">선택 가능한 날짜 및 시간이 없습니다</string>
    <string name="confirm">확인</string>

    <string name="cinema">%s 극장</string>
    <string name="screenig_times">%d개의 상영 시간</string>
    <string name="seat_split_line">|%s|</string>

    <string name="menu_home">홈</string>
    <string name="menu_list">예매 내역</string>
    <string name="menu_settings">설정</string>

    <string name="push_notification">푸시 알림 수신</string>
    <string name="push_description">해제하면 푸시 알림을 수신할 수 없습니다.</string>

    <string name="notification_title">예매 알림</string>
    <string name="notification_description">%s %d분 후에 상영</string>

    <string name="notification_channel_name">영화 예매 리마인드 알림 채널</string>
    <string name="notification_channel_description">영화 예매 리마인드 알림을 위한 채널입니다</string>
</resources>
