<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="reservation"
            type="woowacourse.movie.purchaseconfirmation.uimodel.PurchaseConfirmationUiModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_result_guide"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:background="#9160F9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_result_cancel_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@{reservation.cancelDeadLine}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="영화 상영 시작 시간 15분 전까지\n
취소가 가능합니다." />

        <TextView
            android:id="@+id/tv_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:text="@{reservation.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_result_guide"
            tools:text="해리 포터와 마법사의 돌" />

        <TextView
            android:id="@+id/tv_result_running_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:text="@{reservation.dateTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result_title"
            tools:text="2024.3.1" />

        <TextView
            android:id="@+id/tv_result_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:paddingHorizontal="100dp"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:text="@{reservation.bookingDetail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result_running_date"
            tools:text="일반 1명" />

        <TextView
            android:id="@+id/tv_result_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:text="@{reservation.totalPrice.price}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result_count"
            tools:text="13,000원 (현장 결제)" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
